adminのuser一覧をリファクタ

--- a/app/assets/stylesheets/blocks/practice/_practice-content.sass
+++ b/app/assets/stylesheets/blocks/practice/_practice-content.sass
@@ -2,6 +2,8 @@
   max-width: 100%
   width: 50rem
   +margin(horizontal, auto)
+  &:not(:first-child)
+    margin-top: 2rem
 
 .practice-content
   position: relative
