--- a/app/assets/stylesheets/blocks/report/_stamp.sass
+++ b/app/assets/stylesheets/blocks/report/_stamp.sass
@@ -1,8 +1,7 @@
 .stamp
-  border: double .1875rem $stamp-color
+  border: solid 1px $stamp-color
   border-radius: .75rem
   +size(4rem 3.5rem)
-  padding: .125rem
   +position(absolute, right 0, top -.125rem)
   transform: rotate(25deg)
   +text-block(.625rem 1, block center $stamp-color)
