--- a/app/assets/stylesheets/blocks/user/_user-data.sass
+++ b/app/assets/stylesheets/blocks/user/_user-data.sass
@@ -1,20 +1,19 @@
 .user-part
   background-color: #b04d4d
   +inline-block(middle)
-  padding: .1875rem .5rem
-  +text-block(.625rem 1.45, center $reversal-text 600)
+  padding: .25rem .5rem
+  +text-block(.625rem 1, center $reversal-text 600)
   margin-right: .5rem
   border-radius: .25rem
   &.is-header
     margin-left: .5rem
     margin-right: 0
-  &.is-working_week
-    background-color: $accent-color
-    color: $default-text
   &.is-adviser
     background-color: #3976c3
   &.is-graduate
     background-color: #409c73
+  &.is-admin
+    background-color: $main-color
 
 .user-data
   padding: 1rem
