--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -6,56 +6,4 @@ header.page-header
 = render "/admin/admin_page_tabs", active: 1
 .page-body
   .container.is-padding-horizontal-0-sm-down
-    .admin-table
-      table.admin-table__table
-        thead.admin-table__header
-          tr.admin-table__labels
-            th.admin-table__label ユーザー名
-            th.admin-table__label SNS
-            th.admin-table__label 就職支援
-            th.admin-table__label 操作
-        tbody.admin-table__items
-          - @users.each do |user|
-            tr.admin-table__item
-              td.admin-table__item-value
-                - if user.graduation
-                  .user-part(class="is-graduate")
-                    = t("graduate")
-                - if user.adviser
-                  .user-part(class="is-adviser")
-                    = t("adviser")
-                = link_to admin_user_path(user), class: "admin-table__user" do
-                  = gravatar_tag user, secure: true, html: { class: "admin-table__user-icon" }
-                  span.admin-table__user-login-name
-                    = user.login_name
-                    | （#{user.full_name}）
-              td.admin-table__item-value.is-text-align-center
-                ul.is-button-group
-                  - if user.github_account?
-                    li
-                      = link_to user_github_url(user), class: "is-button-simple-sm-secondary is-icon" do
-                        i.fab.fa-github-alt
-                  - if user.twitter_account?
-                    li
-                      = link_to user.twitter_url, class: "is-button-simple-sm-secondary is-icon" do
-                        i.fab.fa-twitter
-                  - if user.facebook_url?
-                    li
-                      = link_to user.facebook_url, class: "is-button-simple-sm-secondary is-icon" do
-                        i.fab.fa-facebook
-                  - if user.blog_url?
-                    li
-                      = link_to user.blog_url, class: "is-button-simple-sm-secondary is-icon" do
-                        i.fas.fa-home
-                    - if user.feed_url?
-                      li
-                        = link_to user.feed_url, class: "is-button-simple-sm-secondary is-icon" do
-                          i.fas.fa-rss
-              td.admin-table__item-value.is-text-align-center
-                - if user.find_job_assist
-                  i.far.fa-circle
-                - else
-                  i.fas.fa-times
-              td.admin-table__item-value.is-text-align-center
-                = link_to edit_admin_user_path(user), class: "is-button-simple-sm-warning is-icon" do
-                  i.fas.fa-pen
+    = render "/admin/users/admin_users_table", users: @users
