--- a/app/assets/stylesheets/blocks/thread/_threads.sass
+++ b/app/assets/stylesheets/blocks/thread/_threads.sass
@@ -49,7 +49,6 @@
   margin-right: .5rem
   border-radius: .75rem
 
-
 .thread-list-item__title-link
   +text-block(1rem 1.5, 600 $side)
   word-break: break-all
@@ -63,6 +62,8 @@
   +media-breakpoint-down(sm)
     margin-left: 0
     margin-bottom: .25rem
+  .thread-list-item__header:hover &
+    +position(relative, 1)
 
 .thread-list-item__actions-link
   +text-block(1rem 1, flex #b9b9b9)
