--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -9,6 +9,9 @@ header.header
         - if current_user.adviser
           .user-part.is-header(class="is-adviser")
             = t("adviser")
+        - if current_user.admin?
+          .user-part.is-header(class="is-admin")
+            | 管理者
       .header-links.is-user-links
         ul.header-links__items
           li
@@ -16,7 +19,7 @@ header.header
               = text_field_tag "word", params[:word], class: "a-xs-text-input header-search__text-input", placeholder: t("search_report")
               button.is-button-simple-sm-secondary.is-icon.header-search__submit(type="submit")
                 i.fas.fa-search
-          - if current_user && current_user.admin?
+          - if current_user.admin?
             li.header-links__item
               = link_to admin_root_path, class: "header-links__link #{current_link /^admin/}" do
                 i.fab.fa-font-awesome-flag
