--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -8,21 +8,6 @@ header.page-header
 
 .page-body
   .container
-    - @entries.each do |entry|
-      article.entry
-        header.entry-header
-          h3.entry-header__title
-            = link_to entry.url, class: "entry-header__title-link" do
-              = entry.title
-          ul.entry-header__meta-items
-            li.entry-header__meta-item.is-published
-              = l entry.published, format: :semi_long
-            - if entry.author
-              li.entry-header__meta-item.is-author
-                | posted by #{entry.author}
-                //= gravatar_tag entry.author, secure: true, size: 44, html: { class: "report-list-item__author-icon"}
-        .entry-body
-          - if entry.content.nil?
-            .is-long-text-style = raw entry.summary
-          - else
-            .is-long-text-style = raw entry.content
+    - @users.each do |user|
+      div
+        h2 = link_to "#{user.full_name}のブログ", user.blog_url, target: "blank"
