デザイン微調整

--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -30,7 +30,7 @@ $primary: #304ca2
 $success: #98c96c
 $info: #289a60
 $warning: #fabd17
-$danger: #dd6583
+$danger: #dc4268
 
 =default-link
   transition: color .2s ease-in
