--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -29,12 +29,11 @@ header.page-header
           .practice-content-actions
             ul.practice-content-actions__items
               li.practice-content-actions__item
-                = link_to new_question_path, class: "is-button-simple-md-warning" do
+                = link_to new_question_path, class: "is-button-simple-md-primary" do
                   i.fas.fa-question-circle
                   | 質問する
               li.practice-content-actions__item
                 button.im-stack.is-button-simple-md-warning
-                  i.fas.fa-exclamation-triangle
                   = "行き詰まった！"
                 javascript:
                   $(document).on("click", ".im-stack", function(){
@@ -58,19 +57,19 @@ header.page-header
             - if @practice.submission
               - if @practice.product(current_user).present?
                 li.practice-content-actions__item
-                  = link_to [@practice, @practice.product(current_user)], class: "is-button-simple-md-info" do
+                  = link_to [@practice, @practice.product(current_user)], class: "is-button-simple-md-primary" do
                     i.fas.fa-file
                     | 提出物
               - else
                 li.practice-content-actions__item
-                  = link_to new_practice_product_path(@practice), class: "is-button-simple-md-info" do
+                  = link_to new_practice_product_path(@practice), class: "is-button-simple-md-primary" do
                     i.fas.fa-file
                     | 提出物を作る
             - if @practice.not_completed?(current_user)
               li.practice-content-actions__item
-                = link_to practice_learning_path(@practice), method: :put, class: "is-button-simple-md-info" do
-                  i.fas.fa-check-circle
-                  = t("complete")
+                = link_to practice_learning_path(@practice), method: :put, class: "is-button-simple-md-warning" do
+                  i.fas.fa-check
+                  | 完了
 
   .form-actions
     ul.form-actions__items
