--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -42,24 +42,24 @@
             ul.is-button-group
               - if user.github_account?
                 li
-                  = link_to user_github_url(user), class: 'is-button-simple-sm-secondary is-icon' do
+                  = link_to user_github_url(user), class: "is-button-simple-sm-secondary is-icon" do
                     i.fab.fa-github-alt
               - if user.twitter_account?
                 li
-                  = link_to user.twitter_url, class: 'is-button-simple-sm-secondary is-icon' do
+                  = link_to user.twitter_url, class: "is-button-simple-sm-secondary is-icon" do
                     i.fab.fa-twitter
               - if user.facebook_url?
                 li
-                  = link_to user.facebook_url, class: 'is-button-simple-sm-secondary is-icon' do
+                  = link_to user.facebook_url, class: "is-button-simple-sm-secondary is-icon" do
                     i.fab.fa-facebook
               - if user.blog_url?
                 li
-                  = link_to user.blog_url, class: 'is-button-simple-sm-secondary is-icon' do
+                  = link_to user.blog_url, class: "is-button-simple-sm-secondary is-icon" do
                     i.fas.fa-home
                 - if user.feed_url?
                   li
-                    = link_to user.feed_url, class: 'is-button-simple-sm-secondary is-icon' do
+                    = link_to user.feed_url, class: "is-button-simple-sm-secondary is-icon" do
                       i.fas.fa-rss
           td.admin-table__item-value.is-text-align-center
-            = link_to edit_admin_user_path(user), class: 'is-button-simple-sm-warning is-icon' do
+            = link_to edit_admin_user_path(user), class: "is-button-simple-sm-warning is-icon" do
               i.fas.fa-pen
