トップページのお知らせ表示を修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,5 +1,4 @@
 .page-body
   .container
-    - if @announcements.present?
     .thread-list
-      = render partial: 'announcement_list_item', collection: @announcements, as: :announcement
+      = render partial: 'announcements', collection: @announcements, as: :announcement
