シングルクォテーションをダブルクォテーションに修正

--- a/app/views/announcements/_announcement.html.slim
+++ b/app/views/announcements/_announcement.html.slim
@@ -20,13 +20,13 @@
           .thread-edit-tools__inner
             ul.thread-edit-tools__items
               li.thread-edit-tools__item
-                = link_to edit_announcement_path(announcement), class: 'thread-edit-tools__item-link is-success', id: "js-shortcut-edit" do
+                = link_to edit_announcement_path(announcement), class: "thread-edit-tools__item-link is-success", id: "js-shortcut-edit" do
                   i.fa.fa-pencil
               li.thread-edit-tools__item
-                = link_to new_announcement_path(id: announcement), class: 'thread-edit-tools__item-link is-success' do
+                = link_to new_announcement_path(id: announcement), class: "thread-edit-tools__item-link is-success" do
                   i.fa.fa-files-o
               li.thread-edit-tools__item
-                = link_to announcement_path(announcement), data: { confirm: t('are_you_sure') }, method: :delete, class: 'thread-edit-tools__item-link is-danger' do
+                = link_to announcement_path(announcement), data: { confirm: t("are_you_sure") }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
                   i.fa.fa-trash-o
 
   = link_to announcement.user, itempro: "url", class: "thread__author-link" do
