--- a/app/views/announcements/edit.html.slim
+++ b/app/views/announcements/edit.html.slim
@@ -2,6 +2,6 @@
   .container
     .page-header__container
       h1.page-header__title
-        = t('editing_announcement')
+        = t("editing_announcement")
 .container
-  = render 'form', announcement: @announcement
+  = render "form", announcement: @announcement
