--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
 .page-body
   .container
     .thread-list
-      = render partial: 'announcements', collection: @announcements, as: :announcement
+      = render partial: "announcements", collection: @announcements, as: :announcement
