--- a/app/views/announcements/_form.html.slim
+++ b/app/views/announcements/_form.html.slim
@@ -1,4 +1,4 @@
-= render 'errors', object: announcement
+= render "errors", object: announcement
 = form_with model: announcement, local: true do |f|
   .form__items
     .form-item
@@ -10,7 +10,7 @@
     .form-item
       .row.js-markdown-parent
         .col-md-6.col-xs-12
-          = f.label :description, class: 'a-label'
+          = f.label :description, class: "a-label"
           = f.text_area :description, class: "a-textarea js-warning-form js-markdown markdown-form__text-area", data: { "preview": ".js-preview" }
         .col-md-6.col-xs-12
           .a-label
@@ -20,11 +20,11 @@
     ul.form-actions__items
       li.form-actions__item.is-main.is-help
         - if announcement.new_record?
-          = f.submit "作成", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
+          = f.submit "作成", class: "is-button-simple-lg-warning is-block", id: "js-shortcut-submit"
         - else
-          = f.submit "内容変更", class: 'is-button-simple-lg-warning is-block', id: "js-shortcut-submit"
+          = f.submit "内容変更", class: "is-button-simple-lg-warning is-block", id: "js-shortcut-submit"
       li.form-actions__item
-        - if params[:action] == 'new' || params[:action] == 'create'
-          = link_to 'キャンセル', announcements_path, class: "is-button-simple-md-secondary"
-        - elsif params[:action] == 'edit' || params[:action] == 'update'
-          = link_to 'キャンセル', announcement_path, class: "is-button-simple-md-secondary"
+        - if params[:action] == "new" || params[:action] == "create"
+          = link_to "キャンセル", announcements_path, class: "is-button-simple-md-secondary"
+        - elsif params[:action] == "edit" || params[:action] == "update"
+          = link_to "キャンセル", announcement_path, class: "is-button-simple-md-secondary"
