--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -12,7 +12,7 @@ nav.global-nav.js-show-mobile-nav__target.js-show-mobile-nav
             .global-nav-links__link-icon
               i.fas.fa-bullhorn
             .global-nav-links__link-label
-              = t('announcements')
+              = t("announcements")
         li.global-nav-links__item
           = link_to practices_path, class: "global-nav-links__link #{current_link /^practices/}" do
             .global-nav-links__link-icon
