質問一覧にプラクティスでの絞り込み機能を追加

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -11,13 +11,21 @@ header.page-header.is-margin-bottom-0
               = t("new_question")
 
 .page-body
-  nav.tab-nav
-    .container.is-xs-horizontal-padding-0
-      ul.tab-nav__items
-        li.tab-nav__item
-          = link_to "未解決", questions_path, class: "tab-nav__item-link #{params[:solved].present? ? "" : "is-active"}"
-        li.tab-nav__item
-          = link_to "解決済み", questions_path(solved: "true"), class: "tab-nav__item-link #{params[:solved].present? ? "is-active" : ""}"
+  = form_tag :questions, method: "get" do
+    nav.sort-nav
+      .container
+        .sort-nav__inner
+          = hidden_field_tag :solved, params[:solved]
+          = label_tag :practice_id, "プラクティスで絞り込む:", class: "sort-nav__label"
+          .is-button-simple-md-secondary.is-select.sort-nav__select
+            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, { selected: params[:practice_id] }), include_blank: "全ての質問を表示", onchange: "this.form.submit()"
+    nav.tab-nav
+      .container.is-xs-horizontal-padding-0
+        ul.tab-nav__items
+          li.tab-nav__item
+            = link_to "未解決", polymorphic_path(:questions, practice_id: params[:practice_id]), class: "tab-nav__item-link #{params[:solved].present? ? "": "is-active"}"
+          li.tab-nav__item
+            = link_to "解決済み", polymorphic_path(:questions, solved: "true", practice_id: params[:practice_id]), class: "tab-nav__item-link #{params[:solved].present? ? "is-active" : ""}"
 
   .container
     .thread-list
