--- a/app/views/announcements/index.html.slim
+++ b/app/views/announcements/index.html.slim
@@ -1,6 +1,6 @@
 - title t("announcements")
 
-header.page-header.is-margin-bottom-0.has-border-bottom-none
+header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
