--- a/app/views/users/comments/index.html.slim
+++ b/app/views/users/comments/index.html.slim
@@ -11,4 +11,5 @@ header.page-header
 
 .page-body
   .container
+    = paginate @comments, position: "top"
     = render "comments/comments", comments: @comments
