CIテスト落っこちたので対応

--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -3,14 +3,14 @@
     | コメント
     span.thread-comments-container__title-count
       - if comments.respond_to? :total_count
-        = comments.total_count 
-        |  件
+        = comments.total_count
+        |  件中
         small
           |（
           = (comments.offset_value + 1)
-          |  〜 
+          | 〜
           = (comments.offset_value + comments.length)
-          |  件を表示中）
+          |  件を表示）
       - else
         = comments.count
         |  件
