ページネーションレイアウト崩れ修正
raw("<i class=.fas.fa-angle-double-left'></i>")
=>raw("<i class='fas fa-angle-double-left'></i>")

--- a/app/views/kaminari/_last_page.html.slim
+++ b/app/views/kaminari/_last_page.html.slim
@@ -1,2 +1,2 @@
 li.pagination__item.is-last
-  = link_to_unless current_page.last?, raw("<i class=.fas.fa-angle-double-right'></i>"), url, remote: remote, class: "pagination__item-link is-last"
+  = link_to_unless current_page.last?, raw("<i class='fas fa-angle-double-right'></i>"), url, remote: remote, class: "pagination__item-link is-last"
