レポート一覧画面にページネーション機能を実装

--- a/app/views/users/reports/index.html.slim
+++ b/app/views/users/reports/index.html.slim
@@ -10,4 +10,5 @@ header.page-header
 = render "page_tabs", resource: @user
 
 .container
+  = paginate @reports, position: "top"
   = render "reports/reports", reports: @reports
