リタイアページのデザイン

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -39,7 +39,7 @@
 // style
 //////////////////////////////
 
-@import base
+@import shared/**/*
 @import github
 @import atoms/**/*
 @import blocks/**/*
