--- a/app/assets/stylesheets/settings/variables/_0colors.sass
+++ b/app/assets/stylesheets/settings/variables/_0colors.sass
@@ -1,4 +1,4 @@
-$main-color: #372c7d
+$main-color: #4638a0
 $accent-color: #ffbe0a
 $base: white
 $base-color: $base
@@ -10,9 +10,9 @@ $reversal-text: white
 $muted-text: #9da4a7
 
 $side: $main-color
-$side-border: #3d4766
+$side-border: #6b4eca
 $side-tint: #4e6165
-$side-shade: #091026
+$side-shade: #3a228a
 $side-active: $accent-color
 
 $card-header: #819093
