--- a/app/assets/stylesheets/settings/variables/_welcome_colors.sass
+++ b/app/assets/stylesheets/settings/variables/_welcome_colors.sass
@@ -5,3 +5,4 @@
 $welcome-main-color: #0bb5e1
 $welcome-accent-color: #f4e90f
 $welcome-default-text: #5a5f60
+$welcome-card-border: $welcome-default-text
