--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -37,7 +37,7 @@
 // style
 //////////////////////////////
 
-@import base
+@import shared/**/*
 @import github
 @import atoms/**/*
 @import blocks/shared/alert
