--- a/app/assets/stylesheets/welcome/_welcome-faq.sass
+++ b/app/assets/stylesheets/welcome/_welcome-faq.sass
@@ -1,5 +1,5 @@
 .welcome-faq
-  border: solid 2px #515556
+  border: solid 2px $welcome-card-border
   background-color: $base
   padding: 1.25rem 1rem 1rem 2.5rem
   border-radius: .25rem
