--- a/app/assets/stylesheets/welcome/_welcome-header-nav.sass
+++ b/app/assets/stylesheets/welcome/_welcome-header-nav.sass
@@ -12,13 +12,13 @@
   +margin(horizontal, .25rem)
 
 .welcome-header-nav__item-link
-  +text-block(.75rem 1.45, flex #515556 700)
+  +text-block(.75rem 1.45, flex $welcome-card-border 700)
   align-items: center
   justify-content: center
   +size(5.75rem 1.875rem)
   background-color: red
   border-radius: .375rem
-  border: solid 2px #515556
+  border: solid 2px $welcome-card-border
   &.is-login
     background-color: #f192aa
   &.is-company
