--- a/app/assets/stylesheets/welcome/_welcome-member.sass
+++ b/app/assets/stylesheets/welcome/_welcome-member.sass
@@ -4,7 +4,7 @@
 
 .welcome-member
   background-color: rgba($base, .8)
-  border: solid 2px #515556
+  border: solid 2px $welcome-card-border
   padding: 1.25rem 1.5rem 1.5rem
   border-radius: .25rem
   height: 100%
