--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-item.sass
@@ -20,7 +20,7 @@
   width: 100%
   padding: .5rem
   background-color: #f7f7f7
-  border: solid 1px #515556
+  border: solid 1px $welcome-card-border
   border-radius: .25rem
   transition: border-color .2s ease-in, background-color .2s ease-in, box-shadow .2s ease-in
   +media-breakpoint-down(sm)
@@ -48,7 +48,7 @@ textarea.auth-form-item__text-input
     +position(absolute, left 0, top 0)
     background-color: $background-color
     +border-radius(left, .25rem)
-    border: solid 2px #515556
+    border: solid 2px $welcome-card-border
   .auth-form-item__text-input
     padding-left: 3.5rem
 
@@ -64,7 +64,7 @@ textarea.auth-form-item__text-input
   +default-link
 
 .auth-form-item__pp
-  border: solid 1px #515556
+  border: solid 1px $welcome-card-border
   background-color: rgba($base, .8)
   border-radius: .25rem
   overflow: auto
