--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,11 +35,7 @@ html.is-application lang="ja"
         = render "alert"
       main.page
         = yield
-    - if current_user && page_classes.exclude?("no-recent-reports") && (page_category == "index-page" || page_category == "show-page") && recent_reports.present?
-      .recent-reports
-        .recent-reports__items
-          = render partial: "reports/recent_reports", collection: recent_reports, as: :report
-        = link_to reports_path, class: "recent-reports__to-index" do
-          | もっと見る
+    - if current_user && page_classes.exclude?("no-recent-reports") && recent_reports.present?
+      = render "/reports/recent_reports"
     - unless page_classes.include?("welcome")
       = render("to_top")
