--- a/app/assets/stylesheets/welcome/_welcome-side-image-sections.sass
+++ b/app/assets/stylesheets/welcome/_welcome-side-image-sections.sass
@@ -1,6 +1,6 @@
 .welcome-side-image-sections
   background-color: $base
-  border: solid 2px #515556
+  border: solid 2px $welcome-card-border
   border-radius: .5rem
   height: 100%
   padding-bottom: 1rem
