--- a/app/assets/stylesheets/welcome/_welcome.sass
+++ b/app/assets/stylesheets/welcome/_welcome.sass
@@ -84,13 +84,13 @@ body.home-welcome
       +padding(vertical, 2rem)
 
 .welcome-section__title
-  +text-block(1.75rem 1.45 .3em, 400 center #515556)
+  +text-block(1.75rem 1.45 .3em, 400 center $welcome-card-border)
   +media-breakpoint-down(sm)
     +text-block(1.125rem 1.3 1rem)
     +position(relative)
 
 .welcome-section__sub-title
-  +text-block(1.25rem 1.45 .6em, 700 center #515556)
+  +text-block(1.25rem 1.45 .6em, 700 center $welcome-card-border)
   font-feature-settings: "palt"
   +media-breakpoint-down(sm)
     font-size: 1rem
