--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form-radio-button.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form-radio-button.sass
@@ -17,7 +17,7 @@
 
 .auth-form-radio-button__label
   +text-block(.875rem 1.45, block)
-  border: dashed 1px #515556
+  border: dashed 1px $welcome-card-border
   padding: .625rem .625rem .625rem 2rem
   background-color: rgba($base, .6)
   cursor: pointer
@@ -39,7 +39,7 @@
     background-color: $base
   &.is-checked
     background-color: #f4e90f
-    border: solid 1px #515556
+    border: solid 1px $welcome-card-border
     font-weight: 600
     &::after
       content: ''
@@ -56,7 +56,7 @@
 
 .auth-form-checkbox__label
   +text-block(.875rem 1.45, block)
-  border: dashed 1px #515556
+  border: dashed 1px $welcome-card-border
   padding: .625rem .625rem .625rem 2rem
   background-color: rgba($base, .6)
   cursor: pointer
