--- a/app/assets/stylesheets/welcome/auth-form2/_auth-form.sass
+++ b/app/assets/stylesheets/welcome/auth-form2/_auth-form.sass
@@ -3,7 +3,7 @@
   max-width: 40rem
   background: rgba($base, .8)
   padding: 2rem
-  border: solid 2px #515556
+  border: solid 2px $welcome-card-border
   border-radius: .25rem
   +margin(horizontal, auto)
   +media-breakpoint-down(sm)
