--- a/app/views/static_pages/retire.html.slim
+++ b/app/views/static_pages/retire.html.slim
@@ -1,3 +1,5 @@
+- content_for(:page_classes, "no-header no-footer no-recent-reports no-global-nav is-error-page")
+
 .container
   .retire-message
     header.retire-message__header
@@ -5,7 +7,9 @@
         | ログインができません
     .retire-message__body
       p
-        | このアカウントではログインが出来ない状態になっています。長期間ログインをしていなかった、管理者の設定ミス...などの原因が考えられます。再度、アカウントをログインができる状態に戻すので
+        | このアカウントではログインができません。
+      p
+        | 長期間ログインをしていなかった、管理者の設定ミス...などの原因が考えられます。管理者の設定ミスの場合は再度、アカウントをログインができる状態に戻すので
         strong
           | info<i class="fas fa-at"></i>fjord.jp
         | まで連絡をしてください。
