feedのリンクにtarget_blankを追加

--- a/app/views/users/_sns.html.slim
+++ b/app/views/users/_sns.html.slim
@@ -18,5 +18,5 @@
           i.fas.fa-file
     - if user.feed_url?
       li.user-data-sns__item
-        = link_to user.feed_url, class: "user-data-sns__item-link" do
+        = link_to user.feed_url, class: "user-data-sns__item-link", target: "_blank" do
           i.fas.fa-rss
