--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,12 +1,12 @@
 .thread-comments-container
   h2.thread-comments-container__title
     | コメント
-    -# 全ページ共通でページネーションを実装する場合、もっと簡略化できる
-    -# https://github.com/fjordllc/bootcamp/issues/551
-    -#
-    -# @example
-    -# span.thread-comments-container__title-count
-    -#   = page_entries_info(comments, entry_name: "コメント")
+    / 全ページ共通でページネーションを実装する場合、もっと簡略化できる
+    / https://github.com/fjordllc/bootcamp/issues/551
+    /
+    / @example
+    / span.thread-comments-container__title-count
+    /   = page_entries_info(comments, entry_name: "コメント")
     span.thread-comments-container__title-count
       = display_page_count(comments, "")
   .thread-comments
