--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -8,7 +8,7 @@
     / span.thread-comments-container__title-count
     /   = page_entries_info(comments, entry_name: "コメント")
     span.thread-comments-container__title-count
-      = display_page_count(comments, "")
+      = paginate_count(comments, "")
   .thread-comments
     = render partial: "comments/comment", collection: comments.order(:created_at), as: :comment
   = render "comments/form", comment: comments.new
