--- a/app/views/users/reports/index.html.slim
+++ b/app/views/users/reports/index.html.slim
@@ -11,4 +11,8 @@ header.page-header
 
 .container
   = paginate @reports, position: "top"
+  h2.thread-comments-container__title
+    | 日報
+    span.thread-comments-container__title-count
+      = paginate_count(@reports, "")
   = render "reports/reports", reports: @reports
