マイグレーション実装他
View側不要部分削除
View側一部文言修正
Controller側params修正
テスト実装
ついでにusers_controllerのカバレッジ上げた

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -80,6 +80,6 @@
           = link_to user_path, class: "is-button-simple-xs-secondary" do
             | キャンセル
         li.auth-form-action__item
-          = f.submit "内容更新", class: "is-button-simple-md-warning js-sign-up-action"
+          = f.submit "更新する", class: "is-button-simple-md-warning js-sign-up-action"
 
   = render "nda_modal", f: f
