--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -32,7 +32,7 @@ body
   html body &.has-no-right-padding
     padding-right: 14rem
     +media-breakpoint-down(md)
-      +padding(horizontal, 6rem 1rem)
+      +padding(horizontal, 6rem 0)
     +media-breakpoint-down(sm)
       +padding(horizontal, 1rem)
   html body.is-edit-page &.has-no-right-padding,
