--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -23,6 +23,7 @@ header.header
             li.header-links__item
               = link_to admin_root_path, class: "header-links__link #{current_link /^admin/}" do
                 i.fab.fa-font-awesome-flag
+                .header-links__link-label 管理
           li.header-links__item(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
             .header-links__link.js-drop-down__trigger.test-bell
               .header-notification-icon
@@ -30,14 +31,17 @@ header.header
                   .header-notification-count
                     = current_user.notifications.unreads.count
                 i.fas.fa-bell
+                .header-links__link-label 通知
             - if current_user.notifications.unreads.exists?
               = render "application/notifications"
           li.header-links__item
             = link_to edit_user_path(current_user), class: "header-links__link" do
               i.fas.fa-cog
+              .header-links__link-label 設定
           li.header-links__item
             = link_to logout_path, class: "header-links__link" do
               i.fas.fa-sign-out-alt
+              .header-links__link-label ログアウト
       .header-show-mobile-nav-items
         .header-show-mobile-nav(class="#{current_user.notifications.unreads.count > 0 ? "js-drop-down has-count" : "has-no-count"}")
           .header-links__link.js-drop-down__trigger
