ページタイトル横のボタンの調整

--- a/app/assets/stylesheets/blocks/page/_page-header-actions.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header-actions.sass
@@ -3,6 +3,7 @@
     margin-top: .75rem
     padding-top: .75rem
     +margin(horizontal, -1rem)
+    +padding(horizontal, 1rem)
     border-top: solid 1px $background-color
 
 .page-header-actions__items
