--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -6,4 +6,5 @@ header.page-header
 
 .page-body
   .container
-    = render "form", comment: @comment
+    .thread-comments-container
+      = render "form", comment: @comment
