--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -7,10 +7,11 @@ header.page-header
       .page-header__action
       .page-header-actions
         ul.page-header-actions__items
-          li.page-header-actions__item
-            = link_to new_practice_path, class: "is-button-simple-md-warning" do
-              i.fas.fa-plus
-              = t("new_practice")
+          - if current_user.admin?
+            li.page-header-actions__item
+              = link_to new_practice_path, class: "is-button-simple-md-warning" do
+                i.fas.fa-plus
+                = t("new_practice")
 
 .page-body
   .container
