プラクティスで絞り込むのUIにselect2を導入

--- a/app/assets/stylesheets/_common-imports.sass
+++ b/app/assets/stylesheets/_common-imports.sass
@@ -34,6 +34,7 @@
 @import settings/helpers/**/*
 @import font-awesome-sprockets
 @import font-awesome
+@import modules/**/*
 
 //////////////////////////////
 // style
