--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -17,8 +17,8 @@ header.page-header.is-margin-bottom-0
         .sort-nav__inner
           = hidden_field_tag :solved, params[:solved]
           = label_tag :practice_id, "プラクティスで絞り込む:", class: "sort-nav__label"
-          .is-button-simple-md-secondary.is-select.sort-nav__select
-            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, selected: params[:practice_id]), include_blank: "全ての質問を表示", onchange: "this.form.submit()"
+          .sort-nav__select
+            = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, selected: params[:practice_id]), include_blank: "全ての質問を表示", onchange: "this.form.submit()", class: "js-select2"
     nav.tab-nav.is-delete-margin-top
       .container.is-xs-horizontal-padding-0
         ul.tab-nav__items
