--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -19,7 +19,7 @@ nav.sort-nav
       = form_tag reports_url, method: "get" do
         = hidden_field_tag :word, @search_words
         = label_tag :practice_id, "プラクティスで絞り込む:", class: "sort-nav__label"
-        .is-button-simple-md-secondary.is-select.sort-nav__select
+        .sort-nav__select.js-select2
           = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, selected: params[:practice_id]), include_blank: "全ての日報を表示", onchange: "this.form.submit()"
 
 .page-body
