お知らせに足あと機能を実装
[footprint]--belongs_to-->[footprintable]のpolymorphicを定義
Viewファイルを修正
テストファイルを修正
report・announcementにFootprintを紐づけ

--- a/app/views/announcements/show.html.slim
+++ b/app/views/announcements/show.html.slim
@@ -17,3 +17,10 @@ header.page-header
 .page-body
   .container
     = render "announcement", announcement: @announcement
+    - if @footprints.any?
+      .footprints
+        h3.footprints__title
+          = t("we_checked")
+        ul.footprints__items
+          - @footprints.each do |check|
+            = render "reports/report_check", report: @announcement, check: check
