--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -19,8 +19,6 @@ header.page-header
     = render "comments/comments", comments: @report.comments.paging_with_created_at(page: params[:page])
     - if @footprints.any?
       .footprints
-        h3.footprints__title
-          = t("we_checked")
+        h3.footprints__title = t("we_checked")
         ul.footprints__items
-          - @footprints.each do |check|
-            = render "reports/report_check", report: @report, check: check
+          = render @footprints
