--- a/app/views/announcements/show.html.slim
+++ b/app/views/announcements/show.html.slim
@@ -19,8 +19,6 @@ header.page-header
     = render "announcement", announcement: @announcement
     - if @footprints.any?
       .footprints
-        h3.footprints__title
-          = t("we_checked")
+        h3.footprints__title = t("we_checked")
         ul.footprints__items
-          - @footprints.each do |check|
-            = render "reports/report_check", report: @announcement, check: check
+          = render @footprints
