アドバイザー専用サインアップURLが欲しい #566
Viewに隠しパラメータを設置
Controller側でAdviserフラグを管理
テスト実装

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,4 +1,8 @@
 = form_for user do |f|
+  -if params[:role] == "adviser"
+    | アドバイザー
+    = hidden_field_tag :role, "adviser"
+
   = render "errors", object: @user
   .auth-form-items
     .auth-form-item
