--- a/app/views/reports/_report.html.slim
+++ b/app/views/reports/_report.html.slim
@@ -54,13 +54,13 @@
             ul.thread-edit-tools__items
               li.thread-edit-tools__item
                 = link_to edit_report_path(report), class: "thread-edit-tools__item-link is-success", id: "js-shortcut-edit" do
-                  i.fas.fa-pen
+                  i.fas.fa-pen#new
               li.thread-edit-tools__item
                 = link_to new_report_path(id: report), class: "thread-edit-tools__item-link is-success" do
-                  i.fas.fa-copy
+                  i.fas.fa-copy#copy
               li.thread-edit-tools__item
                 = link_to report_path(report), data: { confirm: t("are_you_sure") }, method: :delete, class: "thread-edit-tools__item-link is-danger" do
-                  i.fas.fa-trash-alt
+                  i.fas.fa-trash-alt#delete
 
     - if (admin_login? || adviser_login?) && @report.checks.blank?
       .thread-admin-tools
