--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -6,5 +6,5 @@
   .thread-comments
     = render partial: "comments/comment", collection: comments.order(:created_at), as: :comment
   / コントローラー側で@hidden_flagを立てたらコメントフォームが隠れる
-  -if @hidden_flag.nil?
+  -if (@hidden_flag.nil? || !@hidden_flag)
     = render "comments/form", comment: comments.new
