adminのユーザー一覧にリアイアユーザーにはリタイアと出すようにした

--- a/app/assets/stylesheets/blocks/admin/_admin-table.sass
+++ b/app/assets/stylesheets/blocks/admin/_admin-table.sass
@@ -28,6 +28,8 @@
 
 .admin-table__item
   background-color: $base
+  &.is-inactive
+    background-color: $background-color
   &:last-child
     +border-radius(bottom, .25rem)
 .admin-table__item-value
