--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -12,12 +12,14 @@
         th.admin-table__label 操作
     tbody.admin-table__items
       - users.each do |user|
-        tr.admin-table__item
+        tr.admin-table__item class="#{user.retire? ? "is-inactive" : "" }"
           td.admin-table__item-value.is-text-align-center
             - if user.admin?
               | 管理者
             - elsif user.adviser
               | アドバイザー
+            - elsif user.retire?
+              | リタイア
             - elsif user.graduation
               | 卒業生
             - elsif user.active?
