--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -65,3 +65,12 @@
           td.admin-table__item-value.is-text-align-center
             = link_to edit_admin_user_path(user), class: "is-button-simple-sm-warning is-icon" do
               i.fas.fa-pen
+
+.practice-contents
+  .practice-content
+    header.practice-content__header
+      h2.practice-content__title
+        | 全員のメアド
+    .practice-content__body
+      textarea.a-text-input
+        = @users.pluck(:email).join(",")
