--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -16,7 +16,7 @@ header.page-header
 .page-body
   .container
     = render "report", report: @report
-    = render "comments/comments", comments: @report.comments.paging_with_created_at(page: params[:page])
+    = render "comments/comments", comments: @report.comments.paging_with_created_at(page: params[:page]), form_visible: true
     - if @footprints.any?
       .footprints
         h3.footprints__title = t("we_checked")
