=が一つ多かったので修正

--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,4 +1,4 @@
-== form_visible = true if form_visible.nil?
+= form_visible = true if form_visible.nil?
 .thread-comments-container
   h2.thread-comments-container__title
     | コメント
